cluster/apps/scrutiny/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: scrutiny
  labels:
    goldilocks.fairwinds.com/enabled: "true"
