cluster/apps/scrutiny/daemonset.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: scrutiny-collector
  namespace: scrutiny
spec:
  selector:
    matchLabels:
      app: scrutiny-collector
  template:
    metadata:
      labels:
        app: scrutiny-collector
    spec:
      containers:
        - name: scrutiny-collector
          image: ghcr.io/analogj/scrutiny:v0.7.1-collector
          securityContext:
            privileged: true
            capabilities:
              add:
                - SYS_RAWIO
                - SYS_ADMIN
          volumeMounts:
          - name: devices
            mountPath: /dev
          - name: udev
            mountPath: /run/udev
      restartPolicy: Always
      volumes:
      - hostPath:
          path: /dev
          type: ""
        name: devices
      - hostPath:
          path: /run/udev
          type: ""
        name: udev
