cluster/apps/scrutiny/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scrutiny-web
  namespace: scrutiny
spec:
  selector:
    matchLabels:
      app: scrutiny-web
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: scrutiny-web
    spec:
      restartPolicy: Always
      containers:
        - name: scrutiny-web
          image: ghcr.io/analogj/scrutiny:master-web
          ports:
            - containerPort: 8080
              protocol: TCP
              name: web
          volumeMounts:
          - name: scrutiny
            mountPath: /opt/scrutiny/config
        - name: influxdb
          image: influxdb:2.6-alpine
          volumeMounts:
          - name: influxdb
            mountPath: /var/lib/influxdb2
      volumes:
        - name: influxdb
          persistentVolumeClaim:
            claimName: influxdb
        - name: scrutiny
          persistentVolumeClaim:
            claimName: scrutiny
