cluster/apps/scrutiny/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: scrutiny
  namespace: scrutiny
spec:
  selector:
    app: scrutiny-web
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
