cluster/apps/scrutiny/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scrutiny
  namespace: scrutiny
  annotations:
    haproxy.org/response-set-header: |
      Strict-Transport-Security "max-age=31536000"
      X-Frame-Options "DENY"
      X-Content-Type-Options "nosniff"
      Referrer-Policy "no-referrer-when-downgrade"
spec:
  rules:
    - host: "scrutiny.${SECRET_PRIVATE_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: scrutiny
                port:
                  number: 8080
  tls:
    - secretName: "${SECRET_PRIVATE_DOMAIN_CERT}"
      hosts:
        - "scrutiny.${SECRET_PRIVATE_DOMAIN}"
